# cmd/api/users.go
@@ -1,7 +1,10 @@
 package main
 
 import (
+	"log"
 	"net/http"
+
+	"github.com/muzhiknastya/squares-my-beloved/internal/store"
 )
 
 // GetUser godoc
@@ -21,4 +24,56 @@ func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
 	if err := app.jsonResponse(w, http.StatusOK, user); err != nil {
 		app.internalServerError(w, r, err)
 	}
+}
+
+// listUserTasksHandler godoc
+//	@Summary		List tasks for a specific user
+//	@Description	Get paginated and filtered list of tasks for the specified user ID
+//	@Tags			tasks
+//	@Accept			json
+//	@Produce		json
+//	@Param			userID		path	string	true	"User ID"
+//	@Param			limit		query	int		false	"Results limit (1-100)"	default(100)	minimum(1)	maximum(100)
+//	@Param			offset		query	int		false	"Pagination offset"		default(0)		minimum(0)
+//	@Param			date		query	string	false	"Date filter (today/yesterday/YYYY-MM-DD)"
+//	@Param			completed	query	boolean	false	"Filter by completion status"
+//	@Security		ApiKeyAuth
+//	@Success		201	"Tasks returned successfully"
+//	@Failure		400	"Invalid request parameters"
+//	@Failure		500	"Server error"
+//	@Router			/users/{userID}/tasks [get]
+func (app *application) listUserTasksHandler(w http.ResponseWriter, r *http.Request) {
+	user := getUserFromCtx(r)
+
+	tf := store.TaskFilters{
+		Limit:  100,
+		Offset: 0,
+	}
+
+	tf, err := tf.Parse(r)
+	if err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	}
+
+	if err := Validate.Struct(tf); err != nil {
+		app.badRequestResponse(w, r, err)
+		return
+	}
+
+	// FIXME: remove this
+	log.Println(tf)
+
+	ctx := r.Context()
+	filteredResult, err := app.store.Tasks.GetAllUserTasks(ctx, user.ID, &tf)
+	if err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, filteredResult); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+
 }
